# meteor

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  AUTHORS  CITATION.cff  Dockerfile  README  README.md  README.rst  expected_output.tsv  filtered_cov.tsv  nf-meteor.nf  obtained_output.tsv  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: workflows
.github/workflows/: check_conda.yml  main.yml  publish_meteor.yml
conda_recipe/: environment.yml  meta.yaml
data_preparation_tools/: MeteorImportCSFastaQual.rb  MeteorImportFastq.rb
doc/: conf.py  modules.rst
doc/_build/doctrees/: README.doctree  environment.pickle  index.doctree  modules.doctree
doc/_build/html/: .buildinfo  README.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/source/: conf.py  index.rst
meteor/: MeteorCounter.py  MeteorFastqImporter.py  MeteorImportCSFastaQual.rb  MeteorMapper.py  MeteorReferenceBuilder.py  MeteorReferenceBuilder.rb  MeteorSession.py  counter.py  dataverse_inrae.ini  downloader.py  fastqimporter.py  mapper.py  mapper2.py  merging.py  meteor.py  meteor.rb  meteorcounter.py  meteordownloader.py  meteorfastqimporter.py  meteormapper.py  meteorreferencebuilder.py  meteorsession.py  parser.py  phylogeny.py  profiler.py  referencebuilder.py  session.py  strain.py  strain2tree.py  treebuilder.py  variantcalling.py
meteor-pipeline/src/: MeteorConstant.h  TCensusIniFile.h  TCountedFragment.cpp  TCountedFragmentList.h  TLiteReferenceAnnotationTable.h  TMappingData.h  TMappingDataFile.h  TMeteorCounter.cpp  TMeteorJobIniFile.h  TMeteorProfiler.h  TNGSCensusData.cpp  TNGSCensusFile.cpp  TNGSCensusFile.h  TProfileTable.h  TReadMatchInfoList.cpp  TSAMDefinition.h  TSAMReader.h  makefile
meteor-pipeline/src/tclap/: MultiArg.h  MultiSwitchArg.h  ValueArg.h  XorHandler.h
meteor/data/: GMM_definition.tsv  all_modules_definition_GMM_GBM_KEGG_107.tsv  category_pcm.feather  category_pcm.tsv  dataverse_inrae.ini  ko_list_v116.feather  modules_definition.feather  modules_definition.tsv  zenodo.json
meteor/src/: IniFileManager.cpp  IniFileManager.h  MeteorConstant.h  TCensusIniFile.cpp  TCountedFragment.cpp  TCountedFragment.h  TCountedFragmentList.cpp  TLiteReferenceAnnotationTable.cpp  TMappingData.cpp  TMappingDataFile.cpp  TMeteorCounter.cpp  TMeteorCounter.h  TMeteorJobIniFile.cpp  TMeteorProfiler.cpp  TMeteorSession.cpp  TMeteorSession.h  TNGSCensusData.h  TNGSCensusFile.cpp  TODO.txt  TProfileIniFile.cpp  TProfileIniFile.h  TProfileTable.cpp  TReadMatchInfoList.h  TReferenceAnnotationDatabase.cpp  TReferenceAnnotationDatabase.h  TReferenceIniFile.cpp  TReferenceIniFile.h  TSAMDefinition.cpp  TSAMReader.cpp  counter_main.cpp  makefile  meteor-counting_type_to_colnames.tsv  profiler_main.cpp  utils.cpp  utils.h
meteor/src/tclap/: Arg.h  CmdLine.h  DocBookOutput.h  SwitchArg.h  ValuesConstraint.h  ZshCompletionOutput.h
meteor/tests/: conftest.py  test_counter.py  test_downloader.py  test_fastq_importer.py  test_mapper.py  test_merging.py  test_parser.py  test_phylogeny.py  test_profiler.py  test_reference_builder.py  test_strain.py  test_treebuilder.py  test_variantcalling.py
(+215 files in other folders)
