[tool.poetry]
name = "meteor"
version = "2.0.16"
description = "Meteor - A plateform for quantitative metagenomic profiling of complex ecosystems"
authors = ["Amine Ghozlane <amine.ghozlane@pasteur.fr>", "Florence Thirion <florence.thirion@inrae.fr>", "Florian Plaza-Oñate <florian.plaza-onate@inrae.fr>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["Metagenomics"]
repository = "https://github.com/metagenopolis/meteor"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
packages = [
    { include = "meteor" },
]


[tool.poetry.scripts]
meteor = "meteor.meteor:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.2"
pysam = "^0.22.0"
packaging = "^23.2"
pyarrow = "^15.0.0"
ete3 = "^3.1.3"
biom-format = "^2.1.15"
cogent3 = "^2024.2.5a1"
bgzip = "^0.5.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-datadir = "^1.5.0"
pytest-cov = "^4.1.0"
pysam = "^0.22.0"
pandas = "^2.1.2"
pyarrow = "^15.0.0"
biom-format = "^2.1.15"
cogent3 = "^2024.5.7a1"
ete3 = "^3.1.3"
bgzip = "^0.5.0"


[tool.poetry.group.mypy.dependencies]
mypy = "^1.6.1"
pytest = "^7.4.3"
pysam = "^0.22.0"
pandas = "^2.1.2"
pandas-stubs = "^2.1.1.230928"
types-setuptools = "^68.2.0.0"


[tool.poetry.group.pylint.dependencies]
pylint = "^3.0.2"
anybadge = "^1.14.0"
black = "^23.10.1"


[flake8]
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
